Makefile: Adding --timing_analysis off for moment.
Work around the following issue;
  vtr-verilog-to-routing/vpr/src/timing/timing_util.cpp:588
  calc_relaxed_criticality: Assertion 'crit >= 0. -
  CRITICALITY_ROUND_OFF_TOLERANCE' failed (Criticality should never be
  negative).

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -59,7 +59,7 @@ $(OUTPUT_DIR)/%.eblif: %.eblif | $(OUTPUT_DIR)
 
 # VPR commands
 VPR_ARGS ?=
-VPR_CMD = $(VPR) $(VPR_ARGS)  $(DEVICE_FILE) --device $(DEVICE)
+VPR_CMD = $(VPR) $(VPR_ARGS)  $(DEVICE_FILE) --device $(DEVICE) --timing_analysis off
 VPR_FULL_CMD = cd $(OUTPUT_DIR); $(VPR_CMD)
 
 ROUTE_CHAN_WIDTH ?= 6
