HACK: hard-code device to ice40-virt HX1K

--- a/tests/Makefile.ice40
+++ b/tests/Makefile.ice40
@@ -1,8 +1,8 @@
 # Defaults for the iCE40 architecture.
 
 DEVICE_DIR = ../ice40/devices/
-DEVICE_TYPE ?= ice4
-DEVICE ?= auto
+DEVICE_TYPE ?= ice40-virt
+DEVICE ?= HX1K
 YOSYS_SCRIPT ?= synth_ice40; ice40_opt -unlut; abc -lut 4;
 RR_PATCH_TOOL ?= $(PWD)/../ice40/utils/icebox-routing-import.py
 RR_PATCH_CMD ?= \
