tests/Makefile: Fixed eblif generation

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -43,7 +43,7 @@ $(OUTPUT_DIR):
 
 # Yosys command
 $(OUTPUT_DIR)/%.eblif: %.v | $(OUTPUT_DIR)
-	$(YOSYS) -p "$(YOSYS_SCRIPT) opt_clean; write_eblif $@" $<
+	$(YOSYS) -p "$(YOSYS_SCRIPT) opt_clean; write_blif -attr -cname -conn -impltf -param $@" $<
 
 # Quick shortcut
 #%.eblif: $(OUTPUT_DIR)/%.eblif | $(OUTPUT_DIR)
